# python-a2s

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: coverage_and_lint.yml
a2s/: __init__.py  a2s_async.py  a2s_async.pyi  a2s_fragment.py  a2s_protocol.py  a2s_sync.py  a2s_sync.pyi  a2sasync.py  a2sstream.py  byteio.py  datacls.py  defaults.py  exceptions.py  info.py  players.py  rules.py
